<resources>
    <string name="app_name">Hotel</string>

    <!-- authentication screen -->
    <string name="label_welcome">Welcome to the animal hotels</string>
    <string name="label_bottom_title">Sign in and go to the application!</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="text_register">Register</string>
    <string name="text_terms">By clicking Register you agree to our Terms and Conditions</string>
    <string name="text_question">Still don`t have an account?</string>
    <string name="text_signIn">Sign in</string>
    <string name="button_google" translatable="false">Google</string>

    <!-- register screen -->
    <string name="label_fill">Fill out the profile</string>
    <string name="label_again_password">Again password</string>
    <string name="label_name">Full name</string>
    <string name="label_phone">Phone number</string>
    <string name="label_birth">Birth date</string>
    <string name="text_cancel">Cancel</string>

    <!-- navigation menu -->
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>

    <!-- current renting screen -->
    <string name="text_current_renting">Current renting</string>
    <string name="label_pet_name">Pet name:</string>
    <string name="label_address">Address:</string>
    <string name="text_end_renting">End renting:</string>
    <string name="text_begin_renting">Begin renting:</string>

    <!-- profile screen -->
    <string name="label_setting">Settings</string>
    <string name="button_edit_profile">Edit profile</string>
    <string name="text_delete">Delete</string>

    <!-- edit profile screen -->
    <string name="label_edit_profile">Edit profile</string>
    <string name="text_save">Save</string>

    <!-- confirm dialog -->
    <string name="text_confirm">Confirm</string>
    <string name="text_sure">Are you sure?</string>

    <!-- panel of controlling screen -->
    <string name="text_header_panel">Controlling panel</string>
    <string name="text_current_temperature">Current temperature:</string>
    <string name="text_brightness">Brightness:</string>
    <string name="text_wish_temperature">Wish temperature:</string>
    <string name="text_current_humidity">Current humidity:</string>
    <string name="text_wish_humidity">Wish humidity:</string>
    <string name="label_blocks_of_food">Blocks of food</string>
    <string name="text_food_type">Food type:</string>
    <string name="label_portion">Portion:</string>
    <string name="text_level_filling">Level of filling:</string>
    <string name="text_info_room">Info about room</string>
    <string name="text_video">Video</string>
    <string name="text_feeding">Feeding</string>

    <!-- food schedule screen -->
    <string name="text_schedule">Food schedule</string>
    <string name="text_add_feeding">Add feeding</string>
    <string name="label_date_time">Date and time:</string>
    <string name="text_history_renting">History renting</string>
    <string name="text_renting">Renting</string>
    <string name="text_number_room">Number of room:</string>
    <string name="text_name_hotel">Name of hotel:</string>
    <string name="text_total_price">Total price:</string>
    <string name="text_text_us">Text us</string>
    <string name="hint_text">Text…</string>
    <string name="text_send">Send</string>
    <string name="label_food">Food</string>

    <!-- pet screen -->
    <string name="text_my_pets">My pets</string>
    <string name="text_add_pet">Add pet</string>
    <string name="label_age">Age:</string>
    <string name="label_weight">Weight:</string>
    <string name="label_type_animal">Type animal:</string>
    <string name="label_description">Description:</string>
    <string name="text_edit_pet">Edit pet</string>

    <!-- hotel screen -->
    <string name="label_hotel_name">Hotel name:</string>
    <string name="label_search">Name…</string>

    <!-- rooms screen -->
    <string name="text_rooms">Rooms</string>
    <string name="label_filter_room">Filter room</string>
    <string name="label_begin_date">Renting begin date and time:</string>
    <string name="label_end_date">Renting end date and time:</string>
    <string name="text_apply">Apply</string>
    <string name="label_room">Room</string>
    <string name="label_amount_blocks">Amount of blocks:</string>
    <string name="label_number_room">Number room:</string>
    <string name="label_area">Area:</string>
    <string name="label_price_hour">Price per hour:</string>
    <string name="text_rent">Rent</string>

    <!-- rent screen -->
    <string name="label_fill_fields">Fill fields</string>
    <string name="label_choose_animal">Choose animal:</string>
    <string name="label_feed_schedule">Feed schedule</string>
    <string name="label_autogenerate">Autogenerate</string>
    <string name="label_full_price">Full price:</string>
    <string name="text_pay">Pay</string>

    <!-- Errors -->
    <string name="error_email">Wrong format</string>
    <string name="error_password">Unreliable password.Use upper and lower case, digits, sign</string>
    <string name="error_password_same">Passwords are different</string>
    <string name="error_phone_number">Wrong format of number</string>
    <string name="error_old_enough">Not old enough</string>
    <string name="error_date_format">Incorrect date format</string>
    <string name="error_connect">Connect error</string>
    <string name="error_unknown">Something went wrong</string>
    <string name="error_server">A problem with server</string>

    <!-- Naming screens -->
    <string name="screen_current">Current renting</string>
    <string name="screen_list_pets">Pets</string>
    <string name="screen_list_hotels">Hotels</string>
    <string name="screen_history_renting">History renting</string>
    <string name="screen_feedback">Feedback</string>

    <!-- Toast message -->
    <string name="message_successfully">Successfully</string>
    <string name="label_hotel">Hotel</string>
    <string name="text_close_bar">Close bar</string>
</resources>